Now fixed responsiveness on small, medium, and large screen.[issue#3]

--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@ body {
   body {
     margin-top: 0px;
     margin-bottom: 30px;
-    padding: 0px 5px;
+    padding: 0px 85px;
     padding-bottom: 450px;
   }
 
